--- a/package.json
+++ b/package.json
@@ -2,15 +2,12 @@
   "name": "ajans-saglik-frontend",
   "version": "0.0.0",
   "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    
-  "build:ssr": "ng build",
-  "serve:ssr": "node dist/ajans-saglik-frontend/server/server.mjs"
-  },
+  "ng": "ng",
+  "start": "ng serve",
+  "build": "ng build --configuration production",
+  "watch": "ng build --watch --configuration development",
+  "test": "ng test"
+},
   "private": true,
   "dependencies": {
     "@angular/animations": "^18.2.0",
